[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Backgrounds/blue.png" type="Texture" id=2]
[ext_resource path="res://UI/ButtonNormalBlue.tres" type="StyleBox" id=3]
[ext_resource path="res://Hazards/BigAsteroids/BigAsteroid01.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hazards/BigAsteroids/BigAsteroid02.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hazards/SmallAsteroids/SmallAsteroid01.tscn" type="PackedScene" id=6]
[ext_resource path="res://Hazards/SmallAsteroids/SmallAsteroid02.tscn" type="PackedScene" id=7]
[ext_resource path="res://MainMenu.gd" type="Script" id=8]
[ext_resource path="res://AsteroidDecorations.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AsteroidDecorations" type="Node2D" parent="."]
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="BigAsteroid01" parent="AsteroidDecorations" instance=ExtResource( 4 )]
position = Vector2( 120, 296 )
use_initial_velocity = true
initial_velocity = Vector2( 0.2, -0.5 )

[node name="BigAsteroid02" parent="AsteroidDecorations" instance=ExtResource( 5 )]
position = Vector2( 744, 72 )
use_initial_velocity = true
initial_velocity = Vector2( 0.1, 0.3 )

[node name="SmallAsteroid01" parent="AsteroidDecorations" instance=ExtResource( 6 )]
position = Vector2( 200, 168 )
use_initial_velocity = true
initial_velocity = Vector2( -0.2, -0.07 )

[node name="SmallAsteroid02" parent="AsteroidDecorations" instance=ExtResource( 7 )]
position = Vector2( 952, 432 )
use_initial_velocity = true
initial_velocity = Vector2( -0.22, 0.08 )

[node name="Title" type="Label" parent="."]
margin_left = 198.0
margin_top = 72.0
margin_right = 838.0
margin_bottom = 200.0
rect_min_size = Vector2( 384, 64 )
custom_fonts/font = SubResource( 1 )
text = "Space
Shooter"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 360.0
margin_top = 256.0
margin_right = 664.0
margin_bottom = 520.0
rect_min_size = Vector2( 256, 256 )
custom_constants/separation = 36
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 304.0
margin_bottom = 64.0
rect_min_size = Vector2( 256, 64 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoresButton" type="Button" parent="Buttons"]
margin_top = 100.0
margin_right = 304.0
margin_bottom = 164.0
rect_min_size = Vector2( 256, 64 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "High Scores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Buttons"]
margin_top = 200.0
margin_right = 304.0
margin_bottom = 264.0
rect_min_size = Vector2( 256, 64 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="."]
margin_left = 48.6765
margin_top = 40.0
margin_right = 232.676
margin_bottom = 104.0
rect_min_size = Vector2( 128, 64 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "Sign in"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameLabel" type="Label" parent="."]
margin_left = 56.0
margin_top = 120.0
margin_right = 224.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 4 )
text = "username"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/HighScoresButton" to="." method="_on_HighScoresButton_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
